# deop-pm-agent

./: .gitignore  README.md  app.py  bot.py  config.py  pyproject.toml  requirements.txt  sample.env
.github/workflows/: ci-cd.yml
appPackage/: manifest.json
infra/: main.bicep  main.parameters.json
infra/modules/: ai-foundry.bicep  app-service.bicep  bot-service.bicep  cosmos-db.bicep  identity.bicep  key-vault.bicep  monitoring.bicep
infra/scripts/: register-bot-app.sh
pm_agent/: __init__.py  adaptive_cards.py  auth.py  cosmos_client.py  graph_client.py  models.py  primary_agent.py  prompts.py  smart_features.py  tools.py
tests/: test_models.py
